# ZZZDataParser

./: README.md  main.py  path.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
data/: avatars.json  buddy.json  equipment_suits.json  weapons.json
data/raw/: bangboo.json  character.json  equipment.json  weapon.json
data/raw/FileCfg/: AvatarBaseTemplateTb.json  BuddyBaseTemplateTb.json  EquipmentSuitTemplateTb.json  WeaponTemplateTb.json
models/: avatar.py  buddy.py  enums.py  equipment_suit.py  weapon.py  weapon_config.py
src/: base_url.py  client.py  main.py
src/_raw_data/: url.py
src/hakush/: avatar.py  base_data.py  buddy.py  equipment_suit.py  url.py  weapon.py
src/nanoka/: avatar.py  base_data.py  buddy.py  equipment_suit.py  url.py  weapon.py
src/official/: data.py  url.py
src/prydwen/: avatar.py  buddy.py  url.py
src/raw_data/: avatar.py  base_data.py  buddy.py  equipment_suit.py  url.py  weapon.py
src/zenlessdiary/: avatar.py  buddy.py  equipment_suit.py  url.py  weapon.py
