[project]
name = "ZZZDataParser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xtaodada", email = "xtao@xtaolink.cn"},
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "aiofiles>=24.1.0",
    "ujson>=5.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL 3.0+"}


[tool.pdm]
distribution = false
